build/log/idf_py_stdout_output_18319
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/erhan/esp/esp-protocols/components/esp_modem/examples/modem_console/build/bootloader/esp-idf/esptool_py && /home/erhan/.espressif/python_env/idf5.3_py3.8_env/bin/python /home/erhan/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/erhan/esp/esp-protocols/components/esp_modem/examples/modem_console/build/bootloader/bootloader.bin
Bootloader binary size 0x5260 bytes. 0x2da0 bytes (36%) free.
[2/7] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/modem_console_main.cpp.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/modem_console_main.cpp.obj 
/home/erhan/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20240530/xtensa-esp-elf/bin/xtensa-esp32s3-elf-g++  -DESP_PLATFORM -DIDF_VER=\"v5.3\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -Iconfig -I../main -I/home/erhan/esp/esp-idf/components/newlib/platform_include -I/home/erhan/esp/esp-idf/components/freertos/config/include -I/home/erhan/esp/esp-idf/components/freertos/config/include/freertos -I/home/erhan/esp/esp-idf/components/freertos/config/xtensa/include -I/home/erhan/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/erhan/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/erhan/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/erhan/esp/esp-idf/components/freertos/esp_additions/include -I/home/erhan/esp/esp-idf/components/esp_hw_support/include -I/home/erhan/esp/esp-idf/components/esp_hw_support/include/soc -I/home/erhan/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/erhan/esp/esp-idf/components/esp_hw_support/dma/include -I/home/erhan/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/erhan/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/erhan/esp/esp-idf/components/esp_hw_support/port/esp32s3/include -I/home/erhan/esp/esp-idf/components/heap/include -I/home/erhan/esp/esp-idf/components/log/include -I/home/erhan/esp/esp-idf/components/soc/include -I/home/erhan/esp/esp-idf/components/soc/esp32s3 -I/home/erhan/esp/esp-idf/components/soc/esp32s3/include -I/home/erhan/esp/esp-idf/components/hal/platform_port/include -I/home/erhan/esp/esp-idf/components/hal/esp32s3/include -I/home/erhan/esp/esp-idf/components/hal/include -I/home/erhan/esp/esp-idf/components/esp_rom/include -I/home/erhan/esp/esp-idf/components/esp_rom/include/esp32s3 -I/home/erhan/esp/esp-idf/components/esp_rom/esp32s3 -I/home/erhan/esp/esp-idf/components/esp_common/include -I/home/erhan/esp/esp-idf/components/esp_system/include -I/home/erhan/esp/esp-idf/components/esp_system/port/soc -I/home/erhan/esp/esp-idf/components/esp_system/port/include/private -I/home/erhan/esp/esp-idf/components/xtensa/esp32s3/include -I/home/erhan/esp/esp-idf/components/xtensa/include -I/home/erhan/esp/esp-idf/components/xtensa/deprecated_include -I/home/erhan/esp/esp-idf/components/lwip/include -I/home/erhan/esp/esp-idf/components/lwip/include/apps -I/home/erhan/esp/esp-idf/components/lwip/include/apps/sntp -I/home/erhan/esp/esp-idf/components/lwip/lwip/src/include -I/home/erhan/esp/esp-idf/components/lwip/port/include -I/home/erhan/esp/esp-idf/components/lwip/port/freertos/include -I/home/erhan/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/erhan/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/erhan/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/erhan/esp/esp-idf/components/console -I/home/erhan/esp/esp-idf/components/vfs/include -I/home/erhan/esp/esp-idf/components/esp_vfs_console/include -I/home/erhan/esp/esp-idf/components/esp_http_client/include -I/home/erhan/esp/esp-idf/components/esp_event/include -I/home/erhan/esp/esp-idf/components/nvs_flash/include -I/home/erhan/esp/esp-idf/components/spi_flash/include -I/home/erhan/esp/esp-idf/components/esp_partition/include -I/home/erhan/esp/esp-idf/components/esp-tls -I/home/erhan/esp/esp-idf/components/esp-tls/esp-tls-crypto -I/home/erhan/esp/esp-idf/components/mbedtls/port/include -I/home/erhan/esp/esp-idf/components/mbedtls/mbedtls/include -I/home/erhan/esp/esp-idf/components/mbedtls/mbedtls/library -I/home/erhan/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/home/erhan/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/everest/include -I/home/erhan/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m -I/home/erhan/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -I../managed_components/joltwallet__littlefs/include -I/home/erhan/esp/esp-protocols/components/esp_modem/include -I/home/erhan/esp/esp-idf/components/driver/deprecated -I/home/erhan/esp/esp-idf/components/driver/i2c/include -I/home/erhan/esp/esp-idf/components/driver/touch_sensor/include -I/home/erhan/esp/esp-idf/components/driver/twai/include -I/home/erhan/esp/esp-idf/components/driver/touch_sensor/esp32s3/include -I/home/erhan/esp/esp-idf/components/esp_pm/include -I/home/erhan/esp/esp-idf/components/esp_ringbuf/include -I/home/erhan/esp/esp-idf/components/esp_driver_gpio/include -I/home/erhan/esp/esp-idf/components/esp_driver_pcnt/include -I/home/erhan/esp/esp-idf/components/esp_driver_gptimer/include -I/home/erhan/esp/esp-idf/components/esp_driver_spi/include -I/home/erhan/esp/esp-idf/components/esp_driver_mcpwm/include -I/home/erhan/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/home/erhan/esp/esp-idf/components/esp_driver_i2s/include -I/home/erhan/esp/esp-idf/components/esp_driver_sdmmc/include -I/home/erhan/esp/esp-idf/components/sdmmc/include -I/home/erhan/esp/esp-idf/components/esp_driver_sdspi/include -I/home/erhan/esp/esp-idf/components/esp_driver_sdio/include -I/home/erhan/esp/esp-idf/components/esp_driver_dac/include -I/home/erhan/esp/esp-idf/components/esp_driver_rmt/include -I/home/erhan/esp/esp-idf/components/esp_driver_tsens/include -I/home/erhan/esp/esp-idf/components/esp_driver_sdm/include -I/home/erhan/esp/esp-idf/components/esp_driver_i2c/include -I/home/erhan/esp/esp-idf/components/esp_driver_uart/include -I/home/erhan/esp/esp-idf/components/esp_driver_ledc/include -I/home/erhan/esp/esp-idf/components/esp_driver_parlio/include -I/home/erhan/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/erhan/esp/esp-idf/components/esp_netif/include -I../components/espressif__esp_modem_usb_dte/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy   -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/erhan/esp/esp-protocols/components/esp_modem/examples/modem_console=. -fmacro-prefix-map=/home/erhan/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -std=gnu++17 -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/modem_console_main.cpp.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/modem_console_main.cpp.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/modem_console_main.cpp.obj -c ../main/modem_console_main.cpp
../main/modem_console_main.cpp: In function 'void app_main()':
../main/modem_console_main.cpp:167:34: error: redeclaration of 'char apn_rtc [20]'
  167 |      static RTC_RODATA_ATTR char apn_rtc[20] = "internet";
      |                                  ^~~~~~~
../main/modem_console_main.cpp:149:33: note: 'char apn_rtc [20]' previously declared here
  149 |     static RTC_RODATA_ATTR char apn_rtc[20] = "internet";
      |                                 ^~~~~~~
../main/modem_console_main.cpp:168:37: error: redeclaration of 'esp_modem::modem_mode mode_rtc'
  168 |     static RTC_DATA_ATTR modem_mode mode_rtc = esp_modem::modem_mode::COMMAND_MODE;
      |                                     ^~~~~~~~
../main/modem_console_main.cpp:150:37: note: 'esp_modem::modem_mode mode_rtc' previously declared here
  150 |     static RTC_DATA_ATTR modem_mode mode_rtc = esp_modem::modem_mode::COMMAND_MODE;
      |                                     ^~~~~~~~
../main/modem_console_main.cpp:182:5: warning: missing initializer for member 'esp_vfs_littlefs_conf_t::partition' [-Wmissing-field-initializers]
  182 |     };
      |     ^
../main/modem_console_main.cpp:182:5: warning: missing initializer for member 'esp_vfs_littlefs_conf_t::read_only' [-Wmissing-field-initializers]
../main/modem_console_main.cpp:182:5: warning: missing initializer for member 'esp_vfs_littlefs_conf_t::grow_on_mount' [-Wmissing-field-initializers]
../main/modem_console_main.cpp: At global scope:
../main/modem_console_main.cpp:168:37: warning: 'mode_rtc' defined but not used [-Wunused-variable]
  168 |     static RTC_DATA_ATTR modem_mode mode_rtc = esp_modem::modem_mode::COMMAND_MODE;
      |                                     ^~~~~~~~
../main/modem_console_main.cpp:167:34: warning: 'apn_rtc' defined but not used [-Wunused-variable]
  167 |      static RTC_RODATA_ATTR char apn_rtc[20] = "internet";
      |                                  ^~~~~~~
ninja: build stopped: subcommand failed.
